--- a/_projects/2017-06-30-vida.md
+++ b/_projects/2017-06-30-vida.md
@@ -2,6 +2,7 @@
 title: 'Vidå'
 subtitle: 'Intuitive filter system'
 subtitle1: 'Designer'
+order: '1'
 date: 2015-01-01 00:00:00
 description: |
     <p>Vidå is a student project that re-thinks filtering for drinking water for the brand Bodum.</p>
@@ -9,8 +10,8 @@ description: |
 featured_image: '/images/Cover/vida.jpg'
 headline_images: ['/images/Vida/Vidaproduct.jpg']
 skills: ["concept generation", "3D modeling", "rendering", "prototyping"]
-collab: "Laura Paré"
-collab_title: "Collaborator"
+collab: "<a href='https://www.linkedin.com/in/laupare/' target='_blank'>Laura Paré</a>"
+collab_title: "Collaborator"  
 ---
 
 
