--- a/_projects/2019-06-30-Comet.md
+++ b/_projects/2019-06-30-Comet.md
@@ -2,6 +2,7 @@
 title: 'Comet'
 subtitle: '3D passenger vehicle'
 subtitle1: 'Designer'
+order: '3'
 date: 2016-07-30 00:00:00
 description: |
     <p>COMET is a <b>passenger vehicle</b> inspired by quadrotor drone, using a hydraulic propulsion system to obtain a battery life up to three hours, compared to 15 min of similar structures. </p>
