--- a/_projects/2019-10-30-bpm_core.md
+++ b/_projects/2019-10-30-bpm_core.md
@@ -2,14 +2,16 @@
 title: 'Withings BPM Core'
 subtitle: 'Cardiovascular health monitor'
 subtitle1: 'Engineer'
+order: '6'
 date: 2019-07-30 00:00:00
 description: >
-    <p>Withings BPM Core is a smart personal health monitor that keeps track of three key aspects of cardiovascular health: <b> blood pressure, electrocardiogram and valvular health</b>. </p>
+    <p><a href='https://www.withings.com/uk/en/bpm-core'>Withings BPM Core</a> is a smart personal health monitor that keeps track of three key aspects of cardiovascular health: <b> blood pressure</b>,<b> electrocardiogram</b> and <b>valvular health</b>. </p>
     <p>Over the past 2 years, I worked as the <b>lead mechanical engineer </b>with a team of engineers, designers and manufacturing partners to bring BPM Core to the market.</p>
     <p>Withings BPM Core is recognized with the CES 2019 innovation awards and distributed by our distribution partners including Apple Store and FNAC.</p>
+
 featured_image: '/images/Cover/bpm_core.jpg'
-headline_images: ["/images/BPMCore/B1.jpg","/images/BPMCore/B3.jpg"]
-skills: ["mechanical engineering", "3D modeling", "prototyping", "research", "industrialisation","sourcing", "quality control"]
+headline_images: ["/images/BPMCore/B1.jpg"]
+skills: ["mechanical engineering", "3D modeling", "prototyping", "product testing", "industrialisation","sourcing", "quality control"]
 collab: "Withings product team, Elium Studio and manufacturing partners"
 collab_title: "Collaborator"
 ---
@@ -36,7 +38,7 @@ As a mechanical engineer, I led the **selection of materials** for the product. 
 
 ---
 
-Watch the video to discover more about BPM Core.
+Watch a video to discover more about BPM Core.
 
 <iframe width="1362" height="766" src="https://www.youtube.com/embed/MuNwS2lmUIA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
