--- a/_projects/2019-07-30-phone.md
+++ b/_projects/2019-07-30-phone.md
@@ -12,7 +12,7 @@ description: >
     <p> This project has been featured by <a href='https://www.dezeen.com/2020/05/27/sandeep-hoonjan-xianzhi-zhang-haptic-phones' target='_blank'>Dezeen</a> and <a href='https://www.businessinsider.com/feel-the-conversation-device-uses-haptic-touch-during-covid-19-2020-6?r=US&IR=T/' target='_blank'>Business Insider</a>.</p>
 
 featured_image: '/images/Cover/phone.jpg'
-headline_images: ["/images/Phone/1.jpg"]
+headline_images: ["/images/Phone/phonecover.jpg"]
 skills: ["concept generation", "mechanical design", "interaction design", "embedded system design", "prototyping"]
 collab: "<a href='https://www.marionaruizperis.com/' target='_blank'>Sandeep Hoonjan</a>"
 collab_title: "Collaborator"
@@ -23,7 +23,7 @@ collab_title: "Collaborator"
 Feel the conversation is a new way to playfully express the feeling of a conversation between people who maybe don’t speak the same language or share the same culture. It investigates if communication could still take place without verbal conversations.
 
 <div class="gallery" data-columns="2">
-    <img src="/images/Phone/2.jpg">
+    <img src="/images/Phone/phoneuser.jpg">
     <img src="/images/Phone/handover.jpg">
 </div>
 
@@ -37,23 +37,23 @@ The device records the user's speech with an embedded microphone. The peaks are 
 
 <div class="gallery" data-columns="2">
      <img src="/images/Phone/tongue.jpg">
-    <img src="/images/Phone/3.jpg">
+    <img src="/images/Phone/phoneproto.jpg">
 </div>
 
 Two attachments, a brush-style blue silicone feeler and a piece of silicone shaped like a tongue, produce different sensations.
 
 ### Prototyps
 
-![](/images/Phone/proto.jpg)
+![](/images/Phone/phoneevo.jpg)
 
 <div class="gallery" data-columns="4">
-    <img src="/images/Phone/a.jpg">
-    <img src="/images/Phone/b.jpg">
-    <img src="/images/Phone/c.jpg">
-    <img src="/images/Phone/d.jpg">
-    <img src="/images/Phone/g.jpg">
-    <img src="/images/Phone/f.jpg">
-    <img src="/images/Phone/e.jpg">
+    <img src="/images/Phone/phonesilicone2.jpg">
+    <img src="/images/Phone/phonewire2.jpg">
+    <img src="/images/Phone/phonewire.jpg">
+    <img src="/images/Phone/phonescrew.jpg">
+    <img src="/images/Phone/phonewire3.jpg">
+    <img src="/images/Phone/phonesilicone.jpg">
+    <img src="/images/Phone/phonesmile.jpg">
 </div>
 
 ---
