--- a/_projects/2019-11-1-WIO.md
+++ b/_projects/2019-11-1-WIO.md
@@ -27,8 +27,8 @@ The simple behaviour of window opening is an efficient way to exchange outdoor f
 ![](/images/wio/wiotech.jpg)
 
 <div class="gallery" data-columns="2">
-	<img src="/images/wio/2.jpg">
-	<img src="/images/wio/4.jpg">
+	<img src="/images/wio/wioproto1.jpg">
+	<img src="/images/wio/wioproto2.jpg">
 </div>
 
 
