--- a/_projects/2019-10-30-bpm_core.md
+++ b/_projects/2019-10-30-bpm_core.md
@@ -5,35 +5,35 @@ subtitle1: 'Engineer'
 order: '6'
 date: 2019-07-30 00:00:00
 description: >
-    <p><a href='https://www.withings.com/uk/en/bpm-core'>Withings BPM Core</a> is a smart personal health monitor that keeps track of three key aspects of cardiovascular health: <b> blood pressure</b>,<b> electrocardiogram</b> and <b>valvular health</b>. </p>
+    <p><a href='https://www.withings.com/uk/en/bpm-core' target='_blank'>Withings BPM Core</a> is a smart personal health monitor that keeps track of three key aspects of cardiovascular health: <b> blood pressure</b>,<b> electrocardiogram</b> and <b>valvular health</b>. </p>
     <p>Over the past 2 years, I worked as the <b>lead mechanical engineer </b>with a team of engineers, designers and manufacturing partners to bring BPM Core to the market.</p>
     <p>Withings BPM Core is recognized with the CES 2019 innovation awards and distributed by our distribution partners including Apple Store and FNAC.</p>
 
 featured_image: '/images/Cover/bpm_core.jpg'
-headline_images: ["/images/BPMCore/B1.jpg"]
+headline_images: ["/images/BPMCore/bpmcore_cover.jpg"]
 skills: ["mechanical engineering", "3D modeling", "prototyping", "product testing", "industrialisation","sourcing", "quality control"]
 collab: "Withings product team, Elium Studio and manufacturing partners"
 collab_title: "Collaborator"
 ---
 
 
-![](/images/BPMCore/compact.jpg)
+![](/images/BPMCore/bpmcore_compact.jpg)
 
 I accompanied the product through its **full product cycle**, including design definition, component sourcing, product conception, prototyping, design validation, tooling launching, and assembly validation through to production.
 <br>
 Working on a healthcare product requires extreme attention to the <b>accuracy of the measurements</b>.I went through a large body of literature and many design iterations in order to eliminate mechanical interferences to the measurements. 
 
-![](/images/BPMCore/explode.jpg)
+![](/images/BPMCore/bpmcore_explode.jpg)
 
 As a mechanical engineer, I led the **selection of materials** for the product. I am always fascinated by the myriad of factors that need to be taken into account when selecting materials for a lasting product: from their mechanical properties (hardness, weight, conductivity, Young modulus, etc.), aesthetics properties (color, finishing, coating) to their fabrication processes and costs.
 
 <div class="gallery" data-columns="3">
-	<img src="/images/BPMCore/A.1.jpg">
-	<img src="/images/BPMCore/A.2.jpg">
-	<img src="/images/BPMCore/A.3.jpg">
-	<img src="/images/BPMCore/A.4.jpg">
-	<img src="/images/BPMCore/A.5.jpg">
-	<img src="/images/BPMCore/A.6.jpg">
+	<img src="/images/BPMCore/bpmcore_1.jpg">
+	<img src="/images/BPMCore/bpmcore_2.jpg">
+	<img src="/images/BPMCore/bpmcore_3.jpg">
+	<img src="/images/BPMCore/bpmcore_4.jpg">
+	<img src="/images/BPMCore/bpmcore_5.jpg">
+	<img src="/images/BPMCore/bpmcore_6.jpg">
 </div>
 
 ---
