beyond2 project added

--- a/_projects/2019-07-30-phone.md
+++ b/_projects/2019-07-30-phone.md
@@ -2,7 +2,7 @@
 title: 'Feel the conversation.'
 subtitle: 'Haptic interaction'
 subtitle1: 'Designer'
-order: '8'
+order: '9'
 date: 2019-01-02 00:00:00
 description: >
     <p>Feel the conversation. is an experimental project that challenges how people experience communication by <b>substituting language with haptic feedback</b>. 
@@ -42,7 +42,7 @@ The device records the user's speech with an embedded microphone. The peaks are 
 
 Two attachments, a brush-style blue silicone feeler and a piece of silicone shaped like a tongue, produce different sensations.
 
-### Prototyps
+### Prototypes
 
 ![](/images/Phone/phoneevo.jpg)
 
